[package]
name = "osakit-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/osakit-rs"
repository = "https://github.com/doom-fish/osakit-rs"
description = "Safe Rust bindings for Apple's OSAKit framework — AppleScript and JavaScript for Automation on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["osakit", "applescript", "automation", "jxa", "macos"]
categories = ["api-bindings", "os::macos-apis", "development-tools"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "osakit"
crate-type = ["lib"]

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_smoke"

[profile.release]
debug = "full"
strip = "none"
